fixing and adding details

--- a/src/app/components/card/card-form.component.html
+++ b/src/app/components/card/card-form.component.html
@@ -5,7 +5,7 @@
     <form class="border p-3 form row g-3 needs-validation" novalidate>
 
       <div class=" py-5 text-center">
-        <h2 style="color: black;">Actualizar datos</h2>
+        <h2 style="color: black;">Registrar tarjeta</h2>
       </div>
 
       <div class="col-md-6 position-relative"><br><br>
