--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -1,17 +1,18 @@
 
-<section class="container">
+<section class="container" *ngFor="let receipt of receipt">
   <div class="content">
     
     
     <img src="assets/img/logo.jpeg"  width="120" height="120" align="right"/> 
     
   <h1 style="text-align:center">RECIBO ISI</h1>
-    <h2 class="text"><strong>Nombre: </strong></h2>
-    <h2 class="text"><strong>Productos: </strong></h2>
-    <h2 class="text"> <strong>Total a Pagar: </strong></h2>
+    <h2 class="text"><strong>Nombre: </strong> {{ receipt.user_id}}</h2>
+    <h2 class="text"><strong>Productos: </strong>{{ receipt.card_id }}   </h2>
+    <h2 class="text"> <strong>Total a Pagar: </strong>{{ receipt.user_id}} </h2>
     
-    <h2 class="text"><strong>Fecha: </strong></h2>
-    <h2 class="text"><strong>Ciudad: </strong></h2>
+    <h2 class="text"><strong>Fecha: </strong>{{ receipt.date}}</h2>
+    <h2  class="text"><strong>Ciudad: </strong>{{ receipt.product_id}} </h2>
+
  
       <div class="pt-1 mb-3">
                   <button type="button"style="margin: 10px" class="btn btn-dark" [routerLink]="['/catalogue']">
@@ -22,8 +23,6 @@
                   SALIR</button>
                   
                   </div>
-
-            
-                
+    
   </div>
 </section>
