--- a/src/app/components/receipt/receipt.component.css
+++ b/src/app/components/receipt/receipt.component.css
@@ -8,6 +8,7 @@ h1 {
   .container {
     margin: 0 auto;
     width: 100%;
+    height: 20%;
     text-align: center;
     justify-content: center;
   }
