--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -6,14 +6,12 @@
     <img src="assets/img/logo.jpeg"  width="120" height="120" align="right"/>
 
   <h1 style="text-align:center">RECIBO ISI</h1>
-    <h2 class="text"><strong>Nombre: </strong> {{ receipt.user_id}</h2>
-    <h2 class="text"><strong>Productos: </strong>{{ receipt.card_id }}   </h2>
-    <h2 class="text"> <strong>Total a Pagar: </strong>{{ receipt.user_id}} </h2>
+    <h2 class="text"><strong>Nombre: </strong> {{ receipt.name}}  {{ receipt.lastname}} </h2>
+    <h2 class="text"><strong>Productos a Comprar : </strong> {{ receipt.product_name}}   </h2>
+    <h2 class="text"> <strong>Total a Pagar: </strong> {{ receipt.cost_product}}Bs. </h2>
 
-    <h2 class="text"><strong>Fecha: </strong>{{ receipt.date}}</h2>
-    <h2  class="text"><strong>Ciudad: </strong>{{ receipt.product_id}} </h2>
-
-
+    <h2 class="text"><strong>Fecha: </strong>{{receipt.date }}</h2>
+  
       <div class="pt-1 mb-3">
                   <button type="button"style="margin: 10px" class="btn btn-dark" [routerLink]="['/catalogue']">
                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
