--- a/src/app/components/products/form-product.component.html
+++ b/src/app/components/products/form-product.component.html
@@ -7,12 +7,42 @@
           <h1 class="card-title"><b>Registrar Productos</b></h1>
         </div>
   
-            <form  class="row g-3 needs-validation" novalidate  >
+            <form  class="row g-3 pb-5 needs-validation" novalidate  >
 
-                <div class="col-md-12 position-relative">
-                    <label for ="product_name">Producto</label>
-                    <input type="text" class="form-control" name="product_name" [(ngModel)]="product.product_name" ngModel required >
-                </div>
+
+<div class="row">
+    <div class="col-6">
+        
+            <label for ="product_name">Producto</label>
+            <input type="text" class="form-control" name="product_name" [(ngModel)]="product.product_name" ngModel required >
+        
+
+    </div>
+    <div class="col-6">
+
+       <ng-container *ngIf="imageBase64; else elseTemplate">
+        <img width="80" [src]="imageBase64" alt="image">
+       </ng-container>
+       <ng-template #elseTemplate>
+
+        <ng-container *ngIf="product.image; else elseTemplateEditImg">
+            <img width="80" [src]="product.image" alt="image">
+        </ng-container>
+        <ng-template #elseTemplateEditImg>
+            <label for ="imagen">Seleccione una imagen</label>
+        </ng-template>
+
+
+        
+         
+       </ng-template>
+       <br>
+        
+        <input  id="file" name="file" (change)="postMethod($event)" type="file"/> 
+    </div>
+</div>
+
+                
 
                 <div class="col-md-12 position-relative">
                     <label for ="details">Detalles</label>
