--- a/src/app/components/profile-client/profile-client.component.html
+++ b/src/app/components/profile-client/profile-client.component.html
@@ -2,19 +2,19 @@
     <img class="avatar" src="assets/img/logo.jpeg">
 
   </div>
-  
+
   <div class="container main-container animated fadeIn" style="background-color: #D4E6F1  " >
     <div class="container text-center" >
       <section id="top">
-        
-        <h2>Usuario : {{user.username}}</h2>
+
+        <h2>Usuario {{user.name}}</h2>
       </section>
     </div>
-    
-    <div class="main-body">    
+
+    <div class="main-body">
           <div class="row gutters-sm">
             <div class="col-md-4 mb-3">
-            
+
               <div class="card mt-3" style="font-size: 14px;">
                 <ul class="class="navbar navbar-light >
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" >
@@ -24,7 +24,7 @@
                         </svg>
                         Productos Pedidos
                     </a>
-                   
+
                   </li>
 
                   <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" >
@@ -33,9 +33,9 @@
                             <path fill-rule="evenodd" d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
                         </svg>
                        Productos Comprados
-                    </a>     
+                    </a>
                   </li>
-              
+
                 </ul>
               </div>
             </div>
@@ -45,12 +45,12 @@
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Nombre</h6>
-                      
+
                     </div>
                     <div class="col-sm-9 text-secondary" >
                       {{user.name}}
                     </div>
-                    
+
                   </div>
 
 
@@ -86,7 +86,7 @@
                   <hr>
 
 
-                  
+
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0">Telefono</h6>
@@ -96,18 +96,18 @@
                     </div>
                   </div>
                   <hr>
-               
-                  
-              
+
+
+
                 </div>
-               
-               
+
+
               </div>
               </div>
-              
+
           </div>
-      
+
         </div>
-   
+
     </div>
-    
+
