--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -81,6 +81,18 @@
         </svg>
             </a>
           </li>
+         
+
+           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/product-buy']">Reporte Compras
+             
+            </a>
+          </li>
+
+
+
+
+
         </ul>
 
       </div>
