--- a/src/app/components/product-buy/product-buy.component.html
+++ b/src/app/components/product-buy/product-buy.component.html
@@ -3,9 +3,16 @@
   <div class="container text-white py-5 text-center">
     <h1 style="color: black;">Reporte de Compras</h1>
   </div>
+   
 
   <div class="pb-5">
     <div class="container">
+
+
+<div class="position top-50 start-50">
+    <button class="btn btn-dark" type="button" >Productos mas comprados</button>
+  </div>
+
       <div class="row">
         <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
 
