--- a/src/app/components/most-bougth/most-bougth.component.html
+++ b/src/app/components/most-bougth/most-bougth.component.html
@@ -1,1 +1,6 @@
-<p>most-bougth works!</p>
+<div class="px-4 px-lg-0">
+
+  <div class="container text-white py-5 text-center">
+    <h1 style="color: black;">Productos mas comprados</h1>
+  </div>
+</div>
