--- a/src/app/components/product-buy/product-buy.component.html
+++ b/src/app/components/product-buy/product-buy.component.html
@@ -10,7 +10,7 @@
 
 
 <div class="position top-50 start-50">
-    <button class="btn btn-dark" type="button" >Productos mas comprados</button>
+    <button class="btn btn-dark" type="button"[routerLink]="['/product-buy/most-bougth']" >Productos mas comprados</button>
   </div>
 
       <div class="row">
