--- a/src/app/components/most-bougth/most-bougth.component.html
+++ b/src/app/components/most-bougth/most-bougth.component.html
@@ -1,6 +1,53 @@
 <div class="px-4 px-lg-0">
 
   <div class="container text-white py-5 text-center">
-    <h1 style="color: black;">Productos mas comprados</h1>
+    <h1 style="color: black;">Productos mas Comprados</h1>
   </div>
-</div>
+   
+  <div class="pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 p-5 bg-white rounded shadow-sm mb-5">
+
+          <div class="table-responsive " style="font-size: 16px;">
+
+            <table class="table align-middle">
+
+              <thead>
+                <tr>
+                  <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;">Productos mas Comprados</div>
+                  </th>
+
+                  <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;"> Precio </div>
+                  </th>
+
+                   <th scope="col" class="border-0 bg-dark">
+                    <div class="py-2 text-uppercase" style="color: white;"> Detalles</div>
+                  </th>
+                </tr>
+              </thead>
+  <tbody *ngFor="let cart of cart">
+                <tr>
+                  <th scope="row" class="border-0">
+                    <div class="py-2" >
+                      <img [src]="cart.image" class="card-img-top" class="zoom" style="width: 20%; height: 150px; object-fit: cover;" alt="...">
+                      <div class="ml-3 d-inline-block align-middle">
+                        <h4 class="mb-0"> {{cart.product_name}}</h4>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="border-0 align-middle"><h5> {{cart.cost_product}} Bs. </h5></td>
+                   <td class="border-0 align-middle"><h5> {{cart.details}} </h5></td>
+                 
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
