--- a/src/app/components/product-buy/product-buy.component.html
+++ b/src/app/components/product-buy/product-buy.component.html
@@ -1,7 +1,7 @@
 <div class="px-4 px-lg-0">
 
   <div class="container text-white py-5 text-center">
-    <h1 style="color: black;">Reporte de Compras</h1>
+    <h1 style="color: black;">Reporte de productos comprados</h1>
   </div>
    
 
