--- a/src/app/components/most-bougth/most-bougth.component.html
+++ b/src/app/components/most-bougth/most-bougth.component.html
@@ -1,7 +1,7 @@
 <div class="px-4 px-lg-0">
 
   <div class="container text-white py-5 text-center">
-    <h1 style="color: black;">Productos mas Comprados</h1>
+    <h1 style="color: black;">Reporte de productos</h1>
   </div>
    
   <div class="pb-5">
