--- a/src/app/components/product-buy/product-buy.component.html
+++ b/src/app/components/product-buy/product-buy.component.html
@@ -10,7 +10,7 @@
 
 
 <div class="position top-50 start-50">
-    <button class="btn btn-dark" type="button"[routerLink]="['/product-buy/most-bougth']" >Productos mas comprados</button>
+    <button class="btn btn-dark" type="button"[routerLink]="['/product-buy/most-bougth']" >Reporte de productos </button>
   </div>
 
       <div class="row">
@@ -23,7 +23,7 @@
               <thead>
                 <tr>
                   <th scope="col" class="border-0 bg-dark">
-                    <div class="py-2 text-uppercase" style="color: white;">Producto Comprado</div>
+                    <div class="py-2 text-uppercase" style="color: white;">Producto comprados</div>
                   </th>
 
                  
