--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -40,6 +40,21 @@
           </li>
 
 
+
+
+
+           
+
+
+
+
+
+
+
+
+
+
+
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" [routerLink]="['/catalogue']">Catalogo
               <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-shop-window" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -71,6 +86,22 @@
               </svg>
             </a>
           </li>
+
+
+
+
+   <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/list-clients']">Lista de clientes
+              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-bookmark" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+            </svg>
+
+            </a>
+          </li>
+
+
+
+
 
 
       <li class="nav-item">
