--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,15 +1,156 @@
-<section id="hero">
-    <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Tienda virtual ISI</h1>
-    </div>
-  </section>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <div class="section-1">
+
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/img/portada2.png" class="d-block w-100" alt="..." height="600">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Tienda virtuaL ISI</h1>
+        <h5>Nuestra tienda  fisica se encuentra en Miraflores Plaza Uyuni.</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      
+
+<img src="assets/img/portada21.jpg" class="d-block w-100" alt="..." height="600">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Tienda virtual ISI</h1>
+        <h5>Disfruta de nuestro probador virtual</h5>
+      </div>
+
+    </div>
+    <div class="carousel-item">
+      <img src="assets/img/portada40.png" class="d-block w-100" alt="..."height="600">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Tienda virtual ISI</h1>
+        <h5>Registrate y compra nuestros productos en linea.</h5>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<br>
+<br>
+<br>
+<div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+
+        <img src=".../../../assets/img/portada20.jpg" class="img-fluid" alt="">
+      </div>
+      <div class="col-sm-5">
+        <div class="section-1">
+          <div class="container text-center">
+
+           <section id="top">
+             <h1> </h1>
+             <h2 class="heading-1">Nuestra Tienda en La Paz </h2>
+           </section>
+
+          <p>
+            En la zona turística de la ciudad de La Paz en Bolivia usted encontrará
+            nuestra tienda. Tienda de Artesanias ISI vende artesanías 100% bolivianas, hechas a mano, y de comercio justo.
+           Tambien ingrese a la tienda virtual ISI, regístrese como nuestro cliente y acceda al catálogo de los mas novedosos productos que ofrecemos
+      </div>
+    </div>
+    </div>
+    </div>
+  </div>
+<br>
+<br>
+<br>
+<br>
+ <div class="container">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="section-1">
+          <div class="container text-center">
+
+           <section id="top">
+             <h1> </h1>
+             <h2 class="heading-1">La importancia del comercio artesanal</h2>
+           </section>
+
+          <p>
+            Tienda ISI tiene dos estatus dentro de WFTO, la de miembro que nos
+             identifica con el movimiento de comercio justo y la de organización garantizada FT,
+              que significa que hemos demostrado que los principios de cumplen cabalmente en toda
+              la cadena de comercialización y produccción. La importancia va de dos lados; la del cliente
+               y la del productor
+      </div>
+    </div>
+    </div>
+      <div class="col-sm-6">
+        <img src=".../../../assets/img/portada50.jpg" class="img-fluid" alt="">
+      </div>
+    </div>
+  </div>
+<br>
+<br>
+<br>
+<div class="container">
+<h2 class="text-center">Novedades</h2>
+<br>
+<br>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="row">  
+
+      <div class="col-3"> <img src="assets/img/prenda1.jpeg" class="d-block w-100" alt="..." > </div>
+       <div class="col-3"> <img src="assets/img/prenda2.jpeg" class="d-block w-100" alt="..."> </div>
+        <div class="col-3"> <img src="assets/img/prenda3.jpeg" class="d-block w-100" alt="..."> </div>
+         <div class="col-3"> <img src="assets/img/prenda4.jpeg" class="d-block w-100" alt="..."> </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="row">  
+        <div class="col-3"> <img src="assets/img/animacion.jpg" class="d-block w-100" alt="..."> </div>
+       <div class="col-3"> <img src="assets/img/animacion1.jpg" class="d-block w-100" alt="..."> </div>
+        <div class="col-3"> <img src="assets/img/animacion2.jpg" class="d-block w-100" alt="..."height="260"> </div>
+         <div class="col-3"> <img src="assets/img/animacion3.jpg" class="d-block w-100" alt="..." height="260"> </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</div>
+<br>
+<br>
+
+
+
+
+
+
+
+<div class="section-1">
    <div class="container text-center">
 
     <section id="top">
       <h1> </h1>
-      <h2 class="heading-1">Nosotros Somos</h2>
+      <h2 class="heading-1">Nuestros Somos</h2>
     </section>
 
    <p>
@@ -54,6 +195,14 @@ de los artesanos, mediante compra directa de cada producto artesanal
  </div>
 </div>
   </div>
+
+
+
+
+
+
+
+ 
 
 
   <section id="portfolio" class="portfolio">
@@ -102,66 +251,11 @@ de los artesanos, mediante compra directa de cada producto artesanal
 
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-
-        <img src=".../../../assets/img/n1.jpeg" class="img-fluid" alt="">
-      </div>
-      <div class="col-sm-5">
-        <div class="section-1">
-          <div class="container text-center">
-
-           <section id="top">
-             <h1> </h1>
-             <h2 class="heading-1">Nuestra Tienda en La Paz </h2>
-           </section>
-
-          <p>
-            En la zona turística de la ciudad de La Paz en Bolivia usted encontrará
-            nuestra tienda. Tienda de Artesanias ISI vende artesanías 100% bolivianas, hechas a mano, y de comercio justo.
-           Tambien ingrese a la tienda virtual ISI, regístrese como nuestro cliente y acceda al catálogo de los mas novedosos productos que ofrecemos
-
-
-      </div>
-    </div>
-    </div>
-    </div>
-  </div>
+  
 
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-5">
-        <div class="section-1">
-          <div class="container text-center">
-
-           <section id="top">
-             <h1> </h1>
-             <h2 class="heading-1">La importancia del comercio artesanal</h2>
-           </section>
-
-          <p>
-            Tienda ISI tiene dos estatus dentro de WFTO, la de miembro que nos
-             identifica con el movimiento de comercio justo y la de organización garantizada FT,
-              que significa que hemos demostrado que los principios de cumplen cabalmente en toda
-              la cadena de comercialización y produccción. La importancia va de dos lados; la del cliente
-               y la del productor
-      </div>
-    </div>
-    </div>
-
-
-      <div class="col-sm-6">
-
-        <img src=".../../../assets/img/n4.jpeg" class="img-fluid" alt="">
-      </div>
-    </div>
-  </div>
-
-  </div>
-
+ 
 
 
 
@@ -240,3 +334,4 @@ de los artesanos, mediante compra directa de cada producto artesanal
 
     </ul>
   </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
