--- a/src/app/components/pedir/pedir.component.html
+++ b/src/app/components/pedir/pedir.component.html
@@ -22,19 +22,18 @@
                     <div class="col-md-6 position-relative">
                     <label for ="color">Introduzca la cantidad que desea pedir</label>
                     <input type="number" class="form-control" name="quantity1" ngModel #quantity1="ngModel" >
+
+
+
                 </div>
                      <br>
                      <br>
                      
 
-                     <div class="col-12" class="text-left">
-             <button class="btn btn-dark" type="submit"  [routerLink]="['/pedidos']">Pedir producto
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z"/>
-            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-            </svg>
-            </button>
-          </div>                    
+                     <button class="btn btn-dark" style="margin: 10px" type="submit" role="button" (click)='create()'*ngIf="!pedido.order_id ">Realizar Pedido</button>
+
+
+                                            
                  </div>
               </div>
             </div>
